--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlcs/provider-angular-http",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Angular 5+ HttpClient provider for Deus Legem Creation System",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,9 +24,10 @@
     "typescript": "2.8.3"
   },
   "dependencies": {
-    "@angular/core": ">=5.0.0",
     "@angular/common": ">=5.0.0",
-    "@dlcs/core": "~1.0.4",
+    "@angular/core": ">=5.0.0",
+    "@dlcs/core": "~1.0.5",
+    "@dlcs/tools": "~1.0.5",
     "rxjs": "^5.5.10"
   },
   "publishConfig": {
